Css fix for arrow button on safari

--- a/styles/main.css
+++ b/styles/main.css
@@ -318,6 +318,7 @@ hr {
       -webkit-box-align: center;
       -ms-flex-align: center;
       align-items: center;
+      padding: 0px;
     }
 
     .contact {
